--- a/web/views/layout.ejs
+++ b/web/views/layout.ejs
@@ -80,6 +80,9 @@
                 $('<div class="modal fade in" tabindex="-1" role="dialog" style="display: block;"><div class="modal-dialog"><div class="modal-content"><div class="modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button><h4 class="modal-title">' + data.message + '</h4></div><div class="modal-footer"><button type="button" class="btn btn-success" data-dismiss="modal">Ok</button></div></div></div></div>').modal();
 
                 window.location = "/products/purchased";
+            }).fail(function (data) {
+                $("#buy-screen").html(data.message);
+                $("#buy-screen").show();
             });
         })
     })
