--- a/web/views/product_detail.ejs
+++ b/web/views/product_detail.ejs
@@ -51,6 +51,7 @@
                         <input type="hidden" class="form-control" name="product_name" id="product_name" value="<%- product.name %>">
                 </div>
                 <div class="modal-footer">
+                    <span id="error" class="label label-danger pull-left hidden"></span>
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
                     <button type="submit" class="btn btn-success">Buy <i class="glyphicon glyphicon-shopping-cart"></i></button>
                 </div>
