--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,12 +14,12 @@
             <label for="password" class="sr-only">Password</label>
             <input type="password" id="password" name="password" class="form-control" placeholder="Password..." required>
 
-            <input type="hidden" id="returnurl" class="form-control" name="returnurl" value="<%-returnurl%>">
+            <input type="hidden" id="returnurl" class="form-control" name="returnurl" value="<%=returnurl%>">
 
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 
             <% if (auth_error != undefined) { %>
-            <span class="label label-danger"><%-auth_error%></span>
+            <span class="label label-danger"><%=auth_error%></span>
             <% } %>
             <hr />
             <p><b>Users:</b></p>
