--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,6 +1,6 @@
 <% layout('content') %>
 
-<h2>Results for: <%- in_query %></h2>
+<h2>Results for: <%= in_query %></h2>
 
 <% if (products.length == 0) { %>
 <h3 style="color: red;">Products not found</h3>
@@ -20,11 +20,11 @@
 
         <% for( var i=0; i < products.length; i++)  {%>
         <tr>
-            <td><%- i + 1 %></td>
-            <td><%- products[i].name %></td>
-            <td><%- products[i].description %></td>
-            <td><%- products[i].price %></td>
-            <td><a href="/products/detail?id=<%- i + 1 %>"><i class="glyphicon glyphicon-list"></i></a></td>
+            <td><%= i + 1 %></td>
+            <td><%= products[i].name %></td>
+            <td><%= products[i].description %></td>
+            <td><%= products[i].price %></td>
+            <td><a href="/products/detail?id=<%= i + 1 %>"><i class="glyphicon glyphicon-list"></i></a></td>
         </tr>
         <%}%>
         </tbody>
