--- a/views/search.ejs
+++ b/views/search.ejs
@@ -2,6 +2,8 @@
 
 <h2>Results for: <%- in_query %></h2>
 
+<h3>The Query param that came in was: <%- in_query %><h3>
+
 <% if (products.length == 0) { %>
 <h3 style="color: red;">Products not found</h3>
 <% } else {%>
